CMR-1402: Removed deprecated JVM settings