@@ -18,7 +18,7 @@
             [lein-exec "0.3.2"]]
 
   :repl-options {:init-ns user}
-  :jvm-opts ["-XX:PermSize=256m" "-XX:MaxPermSize=256m"]
+  :jvm-opts []
   :profiles
   {:dev {:dependencies [[org.clojure/tools.namespace "0.2.10"]
                         [org.clojars.gjahad/debug-repl "0.3.3"]]
